# hibitset-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_algebra.cpp  bench_construction.cpp  bench_fixture.hpp  bench_iteration.cpp  bench_memory.cpp  bench_mutations.cpp  bench_queries.cpp  bench_workload.cpp  gen_bench_table.py
include/hibitset/: hibitset.hpp
tests/: CMakeLists.txt  test_constexpr.cpp  test_include.cpp  test_oracle.cpp
